# CLI-O

./: .gitignore  .gitmodules  .python-version  README.md  constants.py  llm.py  main.py  pyproject.toml  results.json  results_cot.json  results_langgraph.json  test.py  test_encoder.py  tts.py  utils.py  voice.py  whisper.py
config/: prompt.py
models/: V2.py  V3.py  adapter.py  config.py  encoder.py  llm.py  llm2.py  mel2speech.py  model.py  omni_speech_arch.py  speech2text.py  speech_generator.py  test.py  text2speech.py  tts2.py
test/: kokoro.py  llm2speech.py  rag.py  speech2speech.py  speech2text.py  streamingllm2speech.py  test.py
tests/: agent.py  agentS.py  base_accuracy.py  docker_python.py  dylan_accuracy.py  dylan_agent.py  langgraph_test.py  llm_as_judge.py  llm_speed.py  llm_tool_agent.py  llm_toolcall.py  long_text.txt  questions.py  rag.py  results_base.json  results_dylan.json  results_langgraph.json  s2s_agent.py  s2s_rag.py  s2s_rag_accuracy.py  sink.py  stream-tts.py  stream_nosink.py  stream_offloaded.py  stream_sink.py  stream_tts.py  stream_window.py  streaming-llm.py  test_audio.py  test_ishan_agent.py  time_stt.py  util.py
tests/data/: mt_bench.jsonl  questions.py
tools/: __init__.py  base.py  duckduckgo.py  linux_shell.py  python_intepreter.py  server.py  wikipedia_summary.py
tools/functions/: __init__.py  functions.py
tts_tokenizer_extended/: added_tokens.json  tokenizer_config.json
utils/: docker_interface.py  parse.py  rag.py
