[project]
name = "LlaMa-Omni2-From-Scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nemo>=7.1.4",
    "numba>=0.61.2",
    "openai-whisper>=20240930",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "whisper>=1.1.10",
]
